@@ -113,7 +113,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
 
   /** Description of the Field. */
   public final static String version = "v2.03 Alpha 28";
-  public final static int buildVer = 12;
+  public final static int buildVer = 13;
   
   public static int getBuild()
   {
